# code-names-bot-text-processor

./: .gitignore  README.md  config.py  models.py  pyproject.toml  tasks.py
code_names_bot_text_processor/model/: baseline_model.py  classical_model.py  model.py
code_names_bot_text_processor/term_chunker/: term_chunker.py
data/: definition_sentences.yaml  labels.yaml
data_scripts/: calc_doc_frequencies.py  compounds_processor.py  definition_sentence_generator.py  key_terms_parser.py  load_definitions.py
evaluation/: evaluate.py  evaluation_utils.py  test_single.py
labeler/: labeler.py  labeler_window.py  labels.py  predicted_labels_viewer.py
oxford_definitions/: oxford_definitions.py  oxford_model.py
predictions/: baseline.yaml  classical.yaml
static/: compounds.txt  doc_frequencies.yaml  processed_compounds.txt  wordlist.txt
tools/: custom_parse.py  dependency_parse.py  download_terms.py  find_dict_occurrences.py  get_oxford_definition.py  get_synsets.py  list_lemmas.py  parse_key_terms.py  show_named_entities.py  test_term_chunker.py  transfer_cache.py
